// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildExtrinsicPayload adds DCA params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "3yKDHJgzS2GbZB9qruoadRYtq8597HZifnRju7fHpdRC",
    "retry_duration": 100,
  },
  {
    "chunk_interval": 5,
    "number_of_chunks": 100,
  },
]
`;

exports[`buildExtrinsicPayload adds affiliates 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [
    {
      "account": "0x7a467c9e1722b35408618a0cffc87c1e8433798e9c5a79339a10d71ede9e9d79",
      "bps": 10,
    },
  ],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: dummy cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "ccm_additional_data": "0x",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: with cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "ccm_additional_data": "0x",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds max boost fee 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  30,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Arbitrum ) 1`] = `
[
  "ArbEth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2PKH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "1PYVSoeftFP4EVBN3ou8vZctkhDthJamvp",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2SH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "32k55FA93MYqbjhLk9hokD3P666Vz9QqKb",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "bc1qwqdg6squsna38e46795at95yu9atm8azzmyvckulcc7kytlcckxswvvzej",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 2`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "bc1qeklep85ntjz4605drds6aww9u0qr46qzrv5xswd35uhjuj8ahfcqgf6hak",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin Taproot) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "bc1pcwtqa8tjnq7ry5nmf0a9udzn6nfaqzmxdjj6ee779q2h6c58nyxss5hkga",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Ethereum ) 1`] = `
[
  "Eth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot hex) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot ss58) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana base58) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "3yKDHJgzS2GbZB9qruoadRYtq8597HZifnRju7fHpdRC",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana hex) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": "0x2c247dc239834feac0ecdbc5070a7e0b5d0f462d09e9eba871ad1eb977044823",
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds the broker commission 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  100,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Arbitrum: to Arbitrum 1`] = `
[
  "Sol",
  "ArbEth",
  {
    "Arb": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Bitcoin: to Bitcoin 1`] = `
[
  "Sol",
  "Btc",
  {
    "Btc": "0x6263727431703738356d676138646a6333723566376166616563686c7468346c617861747932727430386e6367796477346a377a76386e703573756637657476",
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Ethereum: to Ethereum 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (hex): to Polkadot (hex) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (ss58): to Polkadot (ss58) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Solana: to Solana 1`] = `
[
  "Sol",
  "SolUsdc",
  {
    "Sol": Uint8Array [
      44,
      36,
      125,
      194,
      57,
      131,
      79,
      234,
      192,
      236,
      219,
      197,
      7,
      10,
      126,
      11,
      93,
      15,
      70,
      45,
      9,
      233,
      235,
      168,
      113,
      173,
      30,
      185,
      119,
      4,
      72,
      35,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;
